[tool.poetry]
name = "CSCE604133"
version = "0.1.0"
description = ""
authors = ["ilmannafian04 <milmannafian04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
scikit-image = "^0.18.3"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
jupyterlab = "^3.1.12"
jupyterlab-darkside-ui = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
